# galaxy

./: .env.example  .gitignore  AGENTS.md  README.md  ROADMAP.md  STRUCTURE.md  VISION.md  docker-compose.yml  pyproject.toml
cmd/galaxy/: main.py
cmd/server/: main.py
docs/: milestone-1-complete.md
docs/architecture/: 01-framework-package-structure.md  02-site-and-bench-model.md  03-app-module-doctype-model.md  04-field-type-dictionary.md  05-postgres-mysql-dialect-differences.md  06-link-and-foreign-key-policy.md  07-migration-safety-rules.md  08-permission-model.md  (+18 more)
galaxy/: app.py  config.py
galaxy_framework_milestones/: 00_project_decision.md  01_phase_overview.md  02_global_agent_rules.md  10_milestone_01_foundation.md  11_milestone_02_core_metadata.md  12_milestone_03_desk_shell.md  13_milestone_04_builder_and_migration.md  14_milestone_05_dynamic_crud.md  15_milestone_06_dynamic_desk_list_form.md  16_milestone_07_permissions.md  17_milestone_08_scripts_reports.md  18_milestone_09_auth_sessions.md  19_milestone_10_security_hardening.md  20_milestone_10_step_02_protect_dangerous_apis.md  21_future_milestone_11_bench_manager_cloud_lite.md  22_future_milestone_12_saas_modes.md  23_future_milestone_13_go_support.md  README.md
sites/: common_site_config.json  platform.db
tests/: conftest.py  test_auth.py  test_bench.py  test_computed_field_engine.py  test_config.py  test_connection.py  test_crud.py  test_crud_engine_integration.py  test_display_logic_engine.py  test_dynamic_source_engine.py  test_field_dependency_engine.py  test_field_rule_engine.py  test_meta_cache.py  test_phase2_seed.py  test_phase3_merge_engine.py  test_phase3_seed.py  test_phase4_merge_engine.py  test_phase4_runtime.py  test_phase4_seed.py  test_phase5_merge_engine.py  test_phase5_seed.py  test_phase6.py  test_portal_auth.py  test_portal_phase3.py  test_runtimemeta.py  test_security.py  test_seed.py  test_tenant.py  test_tenant_isolation.py
(+160 files in other folders)
