[project]
name = "galaxy"
description = "Metadata-driven full-stack low-code business application framework"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dynamic = ["version"]

authors = [
    { name = "Galaxy Labs", email = "developers@galaxylabs.local" }
]

dependencies = [
    # CLI
    "typer>=0.12,<1.0",
    "rich>=13.7,<15",

    # Config and validation
    "pydantic>=2.8,<3",
    "pydantic-settings>=2.4,<3",

    # Database
    "SQLAlchemy>=2.0,<3",
    "psycopg[binary]>=3.2,<4",

    # HTTP server
    "starlette>=0.38,<1",
    "uvicorn[standard]>=0.30,<1",

    # Templates, later Desk UI
    "Jinja2>=3.1,<4",
    "MarkupSafe>=2.1,<4",

    # Security
    "passlib[bcrypt]>=1.7,<2",
    "bcrypt>=4.2,<5",
    "PyJWT>=2.9,<3",

    # Utilities
    "python-dateutil>=2.9,<3",
    "PyYAML>=6.0,<7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
    "pytest-cov>=5,<7",
    "ruff>=0.8,<1",
    "mypy>=1.11,<2",
    "watchdog>=4,<7",
]

later_integrations = [
    "redis>=5,<6",
    "rq>=1.16,<2",
    "boto3>=1.34,<2",
    "google-api-python-client>=2.140,<3",
    "openpyxl>=3.1,<4",
    "pypdf>=5,<7",
    "WeasyPrint>=62,<70",
]

[project.scripts]
galaxy = "internal.cli.app:main"

[project.urls]
Homepage = "https://galaxylabs.local/galaxy"
Repository = "https://github.com/galaxylabs/galaxy"
Documentation = "https://docs.galaxylabs.local/galaxy"

[build-system]
requires = ["hatchling>=1.25,<2"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "internal/__init__.py"

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "I",
    "UP",
    "B",
    "RUF",
]

ignore = [
    "E501"
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
